[package]
name = "mc-mobilecoind-json"
version = "1.0.0"
authors = ["MobileCoin"]
edition = "2018"

[[bin]]
name = "mobilecoind-json"
path = "src/bin/main.rs"

[dependencies]
mc-api = { path = "../api" }
mc-common = { path = "../common", features = ["loggers"] }
mc-mobilecoind-api = { path = "../mobilecoind/api" }
mc-util-grpc = { path = "../util/grpc" }

displaydoc = "0.1"
grpcio = "0.6.0"
hex = "0.4"
rocket = { version = "0.4.5", default-features = false }
rocket_contrib = { version = "0.4.5", default-features = false, features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"
protobuf = { version = "2.18", features = ["with-serde"] }

[dev-dependencies]
mc-crypto-keys = { path = "../crypto/keys" }
mc-ledger-db = { path = "../ledger/db" }
mc-mobilecoind = { path = "../mobilecoind", features = ["test_utils"] }
mc-util-from-random = { path = "../util/from-random" }
mc-transaction-core = { path = "../transaction/core" }
mc-transaction-core-test-utils = { path = "../transaction/core/test-utils" }
mc-connection-test-utils = { path = "../connection/test-utils" }
mc-fog-report-validation = { path = "../fog/report/validation", features = ["automock"] }

rand = "0.7"

[build-dependencies]
# Even though this is unused, it needs to be here otherwise Cargo brings in some weird mixture of packages/features that refuses to compile.
# Go figure ¯\_(ツ)_/¯
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
